fix(assessments): Layout issues

--- a/_src/stylesheets/_assessment.scss
+++ b/_src/stylesheets/_assessment.scss
@@ -91,15 +91,18 @@
   }
 }
 
-@page {
-  size: A4 landscape;
-  margin: 0;
-}
-
 @media print {
-  html, body {
-    width: 240mm;
-    height: 297mm;
+  @page {
+    size: A4 landscape;
+    margin: 0;
+  }
+
+  h2 {
+    font-size: 1.5rem !important;
+  }
+
+  .main-layout.default-layout {
+    padding-bottom: 0px !important;
   }
 
   .assessment {
@@ -119,46 +122,8 @@
       max-width: 700px !important;
     }
 
-    // .results-table {
-    //   thead {
-    //     th {
-    //       span {
-    //         background-color: #1086db;
-    //         font-size: 14px;
-    //       }
-    //     }
-    //   }
-    // }
-
     .results-table {
-      thead {
-        th {
-          background-color: #20b5e3;
-          background-image:
-            linear-gradient(
-              to right,
-              #20b5e3, #1086db
-            );
-
-          &:first-of-type {
-            background-color: #16cbe1;
-            background-image:
-              linear-gradient(
-                to right,
-                #16cbe1, #20b5e3
-              );
-          }
-
-          &:last-of-type {
-            background-color: #1086db;
-            background-image:
-              linear-gradient(
-                to right,
-                #1086db, #1959e6
-              );
-          }
-        }
-      }
+      font-size: 0.75rem;
     }
 
     .shadow {
